// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Navigation/LateralNavbarLayout Hoverable Sidebar 1`] = `
<div
  className="sc-tYoTV hDhykU sc-lateralnavbarlayout"
>
  <div
    className="sc-biBrSq ksJNxY"
  >
    <div
      className="sc-euMpXR kLxkCj"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="sc-fHuLdG hRlcle sc-sidebar"
      >
        <div
          className="sc-ikPAkQ bhepDw"
        >
          <button
            className="sc-dQppl dzJsiX sc-button"
            disabled={false}
            onClick={[Function]}
            size="larger"
            title=""
            type="button"
          >
            <span
              className="sc-hBEYos hgFzca"
            >
              <span
                className="sc-button-text"
              >
                <span
                  className="sc-bqyKva osfTx"
                  size="larger"
                >
                  <i
                    className="fas fa-bars"
                  />
                </span>
                <span
                  className="sc-kstrdz ZegCk"
                >
                  
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          className="sc-dtTInj fDikZz sc-sidebar-item"
          data-cy="Dashboard"
          onClick={[Function]}
          title="Dashboard"
        >
          <div
            className="sc-ikPAkQ bhepDw"
          >
            <i
              className="fas fa-tachometer-alt"
            />
          </div>
          <div
            className="sc-XhUPp izrxiP"
          />
        </div>
        <div
          className="sc-dtTInj dtiMOq sc-sidebar-item"
          data-cy="Servers"
          onClick={[Function]}
          title="Servers"
        >
          <div
            className="sc-ikPAkQ bhepDw"
          >
            <i
              className="fas fa-server"
            />
          </div>
        </div>
        <div
          className="sc-dtTInj dtiMOq sc-sidebar-item"
          data-cy="Disks"
          onClick={[Function]}
          title="Disks"
        >
          <div
            className="sc-ikPAkQ bhepDw"
          >
            <i
              className="fas fa-hdd"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-eHfQar hUImwo main"
    >
      <div
        className="sc-kEjbxe bYhezU sc-loader"
        color="#A14FBF"
        size="massive"
      >
        <span
          className="sc-crrsfI bkmyhs"
        >
          <svg
            height="50"
            version="1.1"
            viewBox="0 0 56 56"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              className="container"
            >
              <path
                className="svg_3"
                d="M25.80000004768371,5.250000393390657 v8.2 H30.200000047683716 V5.1500003933906555 l5.7,3.3 l2.2,-3.8 l-5.8,-3.3 c-1.3,-0.8 -2.8,-1.1 -4.4,-1.1 c-1.5,0 -3,0.4 -4.3,1.2 l-5.8,3.3 l2.2,3.8 L25.80000004768371,5.250000393390657 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_5"
                d="M46.60000004768372,14.650000393390656 l-7.1,4.1 l2.2,3.8 l7.1,-4.1 l0,6.6 l4.4,0 l0,-6.7 c0,-1.5 -0.4,-3 -1.2,-4.3 c-0.8,-1.3 -1.9,-2.4 -3.2,-3.2 l-5.8,-3.3 l-2.2,3.8 L46.60000004768372,14.650000393390656 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.3s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_8"
                d="M46.60000004768372,41.25000039339065 L39.60000004768372,37.150000393390656 l2.2,-3.8 l7.1,4.1 l0,-6.6 l4.4,0 l0,6.7 c0,1.5 -0.4,2.9 -1.2,4.3 c-0.8,1.3 -1.9,2.4 -3.2,3.2 l-5.8,3.3 l-2.2,-3.8 L46.60000004768372,41.25000039339065 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.55s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_4"
                d="M25.80000004768371,50.75000039339065 v-8.2 H30.200000047683716 v8.2 l5.7,-3.3 l2.2,3.8 l-5.7,3.3 c-1.3,0.8 -2.9,1.2 -4.4,1.2 c-1.5,0 -3,-0.4 -4.3,-1.2 l-5.8,-3.3 l2.2,-3.8 L25.80000004768371,50.75000039339065 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.75s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_6"
                d="M7.2000000476837185,37.45000039339065 l7.1,-4.1 l2.2,3.8 l-7.1,4.1 l5.7,3.3 l-2.2,3.8 l-5.8,-3.3 c-1.3,-0.8 -2.4,-1.9 -3.1,-3.2 c-0.8,-1.3 -1.2,-2.8 -1.2,-4.3 l0,-6.7 l4.4,0 L7.2000000476837185,37.45000039339065 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.85s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_7"
                d="M7.2000000476837185,18.550000393390654 l7.1,4.1 l2.2,-3.8 l-7.1,-4.1 l5.7,-3.3 l-2.2,-3.8 l-5.8,3.3 c-1.3,0.8 -2.4,1.9 -3.2,3.2 c-0.8,1.3 -1.2,2.8 -1.2,4.4 l0,6.7 l4.4,0 L7.2000000476837185,18.550000393390654 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.9"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <polygon
                className="svg_9"
                points="28.60000228881836,17.649999976158142 28.60000228881836,26.950003027915955 36.70000076293945,22.34999692440033 "
              />
              <polygon
                className="svg_10"
                points="27.39999771118164,17.649999976158142 19.39999771118164,22.34999692440033 27.39999771118164,26.950003027915955 "
              />
              <polygon
                className="svg_11"
                points="26.89999771118164,27.950003027915955 18.89999771118164,23.34999692440033 18.89999771118164,32.55000340938568 "
              />
              <polygon
                className="svg_12"
                points="29.200000762939453,27.950003027915955 37.20000076293945,32.55000340938568 37.20000076293945,23.450003027915955 "
              />
              <polygon
                className="svg_13"
                points="27.39999771118164,29.05000150203705 19.500003814697266,33.650001883506775 27.39999771118164,38.34999883174896 "
              />
              <polygon
                className="svg_14"
                points="28.60000228881836,29.05000150203705 28.60000228881836,38.34999883174896 36.60000228881836,33.650001883506775 "
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Navigation/LateralNavbarLayout Sidebar Docked 1`] = `
<div>
  <div
    className="sc-tYoTV hDhykU sc-lateralnavbarlayout"
  >
    <div
      className="sc-biBrSq ksJNxY"
    >
      <div
        className="sc-euMpXR kLxkCj"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="sc-fHuLdG hRlcle sc-sidebar"
        >
          <div
            className="sc-dtTInj fDikZz sc-sidebar-item"
            data-cy="Dashboard"
            onClick={[Function]}
            title="Dashboard"
          >
            <div
              className="sc-ikPAkQ bhepDw"
            >
              <i
                className="fas fa-tachometer-alt"
              />
            </div>
            <div
              className="sc-XhUPp izrxiP"
            />
          </div>
          <div
            className="sc-dtTInj dtiMOq sc-sidebar-item"
            data-cy="Servers"
            onClick={[Function]}
            title="Servers"
          >
            <div
              className="sc-ikPAkQ bhepDw"
            >
              <i
                className="fas fa-server"
              />
            </div>
          </div>
          <div
            className="sc-dtTInj dtiMOq sc-sidebar-item"
            data-cy="Disks"
            onClick={[Function]}
            title="Disks"
          >
            <div
              className="sc-ikPAkQ bhepDw"
            >
              <i
                className="fas fa-hdd"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="sc-eHfQar hUImwo main"
      >
        <div
          className="sc-kEjbxe bYhezU sc-loader"
          color="#A14FBF"
          size="massive"
        >
          <span
            className="sc-crrsfI bkmyhs"
          >
            <svg
              height="50"
              version="1.1"
              viewBox="0 0 56 56"
              width="50"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                className="container"
              >
                <path
                  className="svg_3"
                  d="M25.80000004768371,5.250000393390657 v8.2 H30.200000047683716 V5.1500003933906555 l5.7,3.3 l2.2,-3.8 l-5.8,-3.3 c-1.3,-0.8 -2.8,-1.1 -4.4,-1.1 c-1.5,0 -3,0.4 -4.3,1.2 l-5.8,3.3 l2.2,3.8 L25.80000004768371,5.250000393390657 z"
                >
                  <animate
                    attributeName="opacity"
                    attributeType="XML"
                    begin="0s"
                    dur="1s"
                    repeatCount="indefinite"
                    values="1; 0"
                  />
                </path>
                <path
                  className="svg_5"
                  d="M46.60000004768372,14.650000393390656 l-7.1,4.1 l2.2,3.8 l7.1,-4.1 l0,6.6 l4.4,0 l0,-6.7 c0,-1.5 -0.4,-3 -1.2,-4.3 c-0.8,-1.3 -1.9,-2.4 -3.2,-3.2 l-5.8,-3.3 l-2.2,3.8 L46.60000004768372,14.650000393390656 z"
                >
                  <animate
                    attributeName="opacity"
                    attributeType="XML"
                    begin="0.3s"
                    dur="1s"
                    repeatCount="indefinite"
                    values="1; 0"
                  />
                </path>
                <path
                  className="svg_8"
                  d="M46.60000004768372,41.25000039339065 L39.60000004768372,37.150000393390656 l2.2,-3.8 l7.1,4.1 l0,-6.6 l4.4,0 l0,6.7 c0,1.5 -0.4,2.9 -1.2,4.3 c-0.8,1.3 -1.9,2.4 -3.2,3.2 l-5.8,3.3 l-2.2,-3.8 L46.60000004768372,41.25000039339065 z"
                >
                  <animate
                    attributeName="opacity"
                    attributeType="XML"
                    begin="0.55s"
                    dur="1s"
                    repeatCount="indefinite"
                    values="1; 0"
                  />
                </path>
                <path
                  className="svg_4"
                  d="M25.80000004768371,50.75000039339065 v-8.2 H30.200000047683716 v8.2 l5.7,-3.3 l2.2,3.8 l-5.7,3.3 c-1.3,0.8 -2.9,1.2 -4.4,1.2 c-1.5,0 -3,-0.4 -4.3,-1.2 l-5.8,-3.3 l2.2,-3.8 L25.80000004768371,50.75000039339065 z"
                >
                  <animate
                    attributeName="opacity"
                    attributeType="XML"
                    begin="0.75s"
                    dur="1s"
                    repeatCount="indefinite"
                    values="1; 0"
                  />
                </path>
                <path
                  className="svg_6"
                  d="M7.2000000476837185,37.45000039339065 l7.1,-4.1 l2.2,3.8 l-7.1,4.1 l5.7,3.3 l-2.2,3.8 l-5.8,-3.3 c-1.3,-0.8 -2.4,-1.9 -3.1,-3.2 c-0.8,-1.3 -1.2,-2.8 -1.2,-4.3 l0,-6.7 l4.4,0 L7.2000000476837185,37.45000039339065 z"
                >
                  <animate
                    attributeName="opacity"
                    attributeType="XML"
                    begin="0.85s"
                    dur="1s"
                    repeatCount="indefinite"
                    values="1; 0"
                  />
                </path>
                <path
                  className="svg_7"
                  d="M7.2000000476837185,18.550000393390654 l7.1,4.1 l2.2,-3.8 l-7.1,-4.1 l5.7,-3.3 l-2.2,-3.8 l-5.8,3.3 c-1.3,0.8 -2.4,1.9 -3.2,3.2 c-0.8,1.3 -1.2,2.8 -1.2,4.4 l0,6.7 l4.4,0 L7.2000000476837185,18.550000393390654 z"
                >
                  <animate
                    attributeName="opacity"
                    attributeType="XML"
                    begin="0.9"
                    dur="1s"
                    repeatCount="indefinite"
                    values="1; 0"
                  />
                </path>
                <polygon
                  className="svg_9"
                  points="28.60000228881836,17.649999976158142 28.60000228881836,26.950003027915955 36.70000076293945,22.34999692440033 "
                />
                <polygon
                  className="svg_10"
                  points="27.39999771118164,17.649999976158142 19.39999771118164,22.34999692440033 27.39999771118164,26.950003027915955 "
                />
                <polygon
                  className="svg_11"
                  points="26.89999771118164,27.950003027915955 18.89999771118164,23.34999692440033 18.89999771118164,32.55000340938568 "
                />
                <polygon
                  className="svg_12"
                  points="29.200000762939453,27.950003027915955 37.20000076293945,32.55000340938568 37.20000076293945,23.450003027915955 "
                />
                <polygon
                  className="svg_13"
                  points="27.39999771118164,29.05000150203705 19.500003814697266,33.650001883506775 27.39999771118164,38.34999883174896 "
                />
                <polygon
                  className="svg_14"
                  points="28.60000228881836,29.05000150203705 28.60000228881836,38.34999883174896 36.60000228881836,33.650001883506775 "
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Navigation/LateralNavbarLayout Sidebar Expanded 1`] = `
<div
  className="sc-tYoTV hDhykU sc-lateralnavbarlayout"
>
  <div
    className="sc-biBrSq ksJNxY"
  >
    <div
      className="sc-euMpXR dyJtcc"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="sc-fHuLdG clrXFh sc-sidebar"
      >
        <div
          className="sc-dtTInj fDikZz sc-sidebar-item"
          data-cy="Dashboard"
          onClick={[Function]}
          title="Dashboard"
        >
          <div
            className="sc-ikPAkQ bhepDw"
          >
            <i
              className="fas fa-tachometer-alt"
            />
          </div>
          <div
            className="sc-dkIXFM eOZZaa"
          >
            Dashboard
          </div>
          <div
            className="sc-XhUPp izrxiP"
          />
        </div>
        <div
          className="sc-dtTInj dtiMOq sc-sidebar-item"
          data-cy="Servers"
          onClick={[Function]}
          title="Servers"
        >
          <div
            className="sc-ikPAkQ bhepDw"
          >
            <i
              className="fas fa-server"
            />
          </div>
          <div
            className="sc-dkIXFM eOZZaa"
          >
            Servers
          </div>
        </div>
        <div
          className="sc-dtTInj dtiMOq sc-sidebar-item"
          data-cy="Disks"
          onClick={[Function]}
          title="Disks"
        >
          <div
            className="sc-ikPAkQ bhepDw"
          >
            <i
              className="fas fa-hdd"
            />
          </div>
          <div
            className="sc-dkIXFM eOZZaa"
          >
            Disks
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-eHfQar hUImwo main"
    >
      <div
        className="sc-kEjbxe bYhezU sc-loader"
        color="#A14FBF"
        size="massive"
      >
        <span
          className="sc-crrsfI bkmyhs"
        >
          <svg
            height="50"
            version="1.1"
            viewBox="0 0 56 56"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              className="container"
            >
              <path
                className="svg_3"
                d="M25.80000004768371,5.250000393390657 v8.2 H30.200000047683716 V5.1500003933906555 l5.7,3.3 l2.2,-3.8 l-5.8,-3.3 c-1.3,-0.8 -2.8,-1.1 -4.4,-1.1 c-1.5,0 -3,0.4 -4.3,1.2 l-5.8,3.3 l2.2,3.8 L25.80000004768371,5.250000393390657 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_5"
                d="M46.60000004768372,14.650000393390656 l-7.1,4.1 l2.2,3.8 l7.1,-4.1 l0,6.6 l4.4,0 l0,-6.7 c0,-1.5 -0.4,-3 -1.2,-4.3 c-0.8,-1.3 -1.9,-2.4 -3.2,-3.2 l-5.8,-3.3 l-2.2,3.8 L46.60000004768372,14.650000393390656 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.3s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_8"
                d="M46.60000004768372,41.25000039339065 L39.60000004768372,37.150000393390656 l2.2,-3.8 l7.1,4.1 l0,-6.6 l4.4,0 l0,6.7 c0,1.5 -0.4,2.9 -1.2,4.3 c-0.8,1.3 -1.9,2.4 -3.2,3.2 l-5.8,3.3 l-2.2,-3.8 L46.60000004768372,41.25000039339065 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.55s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_4"
                d="M25.80000004768371,50.75000039339065 v-8.2 H30.200000047683716 v8.2 l5.7,-3.3 l2.2,3.8 l-5.7,3.3 c-1.3,0.8 -2.9,1.2 -4.4,1.2 c-1.5,0 -3,-0.4 -4.3,-1.2 l-5.8,-3.3 l2.2,-3.8 L25.80000004768371,50.75000039339065 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.75s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_6"
                d="M7.2000000476837185,37.45000039339065 l7.1,-4.1 l2.2,3.8 l-7.1,4.1 l5.7,3.3 l-2.2,3.8 l-5.8,-3.3 c-1.3,-0.8 -2.4,-1.9 -3.1,-3.2 c-0.8,-1.3 -1.2,-2.8 -1.2,-4.3 l0,-6.7 l4.4,0 L7.2000000476837185,37.45000039339065 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.85s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_7"
                d="M7.2000000476837185,18.550000393390654 l7.1,4.1 l2.2,-3.8 l-7.1,-4.1 l5.7,-3.3 l-2.2,-3.8 l-5.8,3.3 c-1.3,0.8 -2.4,1.9 -3.2,3.2 c-0.8,1.3 -1.2,2.8 -1.2,4.4 l0,6.7 l4.4,0 L7.2000000476837185,18.550000393390654 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.9"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <polygon
                className="svg_9"
                points="28.60000228881836,17.649999976158142 28.60000228881836,26.950003027915955 36.70000076293945,22.34999692440033 "
              />
              <polygon
                className="svg_10"
                points="27.39999771118164,17.649999976158142 19.39999771118164,22.34999692440033 27.39999771118164,26.950003027915955 "
              />
              <polygon
                className="svg_11"
                points="26.89999771118164,27.950003027915955 18.89999771118164,23.34999692440033 18.89999771118164,32.55000340938568 "
              />
              <polygon
                className="svg_12"
                points="29.200000762939453,27.950003027915955 37.20000076293945,32.55000340938568 37.20000076293945,23.450003027915955 "
              />
              <polygon
                className="svg_13"
                points="27.39999771118164,29.05000150203705 19.500003814697266,33.650001883506775 27.39999771118164,38.34999883174896 "
              />
              <polygon
                className="svg_14"
                points="28.60000228881836,29.05000150203705 28.60000228881836,38.34999883174896 36.60000228881836,33.650001883506775 "
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Navigation/LateralNavbarLayout Sidebar With Toggle 1`] = `
<div
  className="sc-tYoTV hDhykU sc-lateralnavbarlayout"
>
  <div
    className="sc-biBrSq ksJNxY"
  >
    <div
      className="sc-euMpXR kLxkCj"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <div
        className="sc-fHuLdG hRlcle sc-sidebar"
      >
        <div
          className="sc-ikPAkQ bhepDw"
        >
          <button
            className="sc-dQppl dzJsiX sc-button"
            disabled={false}
            onClick={[Function]}
            size="larger"
            title=""
            type="button"
          >
            <span
              className="sc-hBEYos hgFzca"
            >
              <span
                className="sc-button-text"
              >
                <span
                  className="sc-bqyKva osfTx"
                  size="larger"
                >
                  <i
                    className="fas fa-bars"
                  />
                </span>
                <span
                  className="sc-kstrdz ZegCk"
                >
                  
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          className="sc-dtTInj fDikZz sc-sidebar-item"
          data-cy="Dashboard"
          onClick={[Function]}
          title="Dashboard"
        >
          <div
            className="sc-ikPAkQ bhepDw"
          >
            <i
              className="fas fa-tachometer-alt"
            />
          </div>
          <div
            className="sc-XhUPp izrxiP"
          />
        </div>
        <div
          className="sc-dtTInj dtiMOq sc-sidebar-item"
          data-cy="Servers"
          onClick={[Function]}
          title="Servers"
        >
          <div
            className="sc-ikPAkQ bhepDw"
          >
            <i
              className="fas fa-server"
            />
          </div>
        </div>
        <div
          className="sc-dtTInj dtiMOq sc-sidebar-item"
          data-cy="Disks"
          onClick={[Function]}
          title="Disks"
        >
          <div
            className="sc-ikPAkQ bhepDw"
          >
            <i
              className="fas fa-hdd"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-eHfQar hUImwo main"
    >
      <div
        className="sc-kEjbxe bYhezU sc-loader"
        color="#A14FBF"
        size="massive"
      >
        <span
          className="sc-crrsfI bkmyhs"
        >
          <svg
            height="50"
            version="1.1"
            viewBox="0 0 56 56"
            width="50"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              className="container"
            >
              <path
                className="svg_3"
                d="M25.80000004768371,5.250000393390657 v8.2 H30.200000047683716 V5.1500003933906555 l5.7,3.3 l2.2,-3.8 l-5.8,-3.3 c-1.3,-0.8 -2.8,-1.1 -4.4,-1.1 c-1.5,0 -3,0.4 -4.3,1.2 l-5.8,3.3 l2.2,3.8 L25.80000004768371,5.250000393390657 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_5"
                d="M46.60000004768372,14.650000393390656 l-7.1,4.1 l2.2,3.8 l7.1,-4.1 l0,6.6 l4.4,0 l0,-6.7 c0,-1.5 -0.4,-3 -1.2,-4.3 c-0.8,-1.3 -1.9,-2.4 -3.2,-3.2 l-5.8,-3.3 l-2.2,3.8 L46.60000004768372,14.650000393390656 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.3s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_8"
                d="M46.60000004768372,41.25000039339065 L39.60000004768372,37.150000393390656 l2.2,-3.8 l7.1,4.1 l0,-6.6 l4.4,0 l0,6.7 c0,1.5 -0.4,2.9 -1.2,4.3 c-0.8,1.3 -1.9,2.4 -3.2,3.2 l-5.8,3.3 l-2.2,-3.8 L46.60000004768372,41.25000039339065 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.55s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_4"
                d="M25.80000004768371,50.75000039339065 v-8.2 H30.200000047683716 v8.2 l5.7,-3.3 l2.2,3.8 l-5.7,3.3 c-1.3,0.8 -2.9,1.2 -4.4,1.2 c-1.5,0 -3,-0.4 -4.3,-1.2 l-5.8,-3.3 l2.2,-3.8 L25.80000004768371,50.75000039339065 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.75s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_6"
                d="M7.2000000476837185,37.45000039339065 l7.1,-4.1 l2.2,3.8 l-7.1,4.1 l5.7,3.3 l-2.2,3.8 l-5.8,-3.3 c-1.3,-0.8 -2.4,-1.9 -3.1,-3.2 c-0.8,-1.3 -1.2,-2.8 -1.2,-4.3 l0,-6.7 l4.4,0 L7.2000000476837185,37.45000039339065 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.85s"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <path
                className="svg_7"
                d="M7.2000000476837185,18.550000393390654 l7.1,4.1 l2.2,-3.8 l-7.1,-4.1 l5.7,-3.3 l-2.2,-3.8 l-5.8,3.3 c-1.3,0.8 -2.4,1.9 -3.2,3.2 c-0.8,1.3 -1.2,2.8 -1.2,4.4 l0,6.7 l4.4,0 L7.2000000476837185,18.550000393390654 z"
              >
                <animate
                  attributeName="opacity"
                  attributeType="XML"
                  begin="0.9"
                  dur="1s"
                  repeatCount="indefinite"
                  values="1; 0"
                />
              </path>
              <polygon
                className="svg_9"
                points="28.60000228881836,17.649999976158142 28.60000228881836,26.950003027915955 36.70000076293945,22.34999692440033 "
              />
              <polygon
                className="svg_10"
                points="27.39999771118164,17.649999976158142 19.39999771118164,22.34999692440033 27.39999771118164,26.950003027915955 "
              />
              <polygon
                className="svg_11"
                points="26.89999771118164,27.950003027915955 18.89999771118164,23.34999692440033 18.89999771118164,32.55000340938568 "
              />
              <polygon
                className="svg_12"
                points="29.200000762939453,27.950003027915955 37.20000076293945,32.55000340938568 37.20000076293945,23.450003027915955 "
              />
              <polygon
                className="svg_13"
                points="27.39999771118164,29.05000150203705 19.500003814697266,33.650001883506775 27.39999771118164,38.34999883174896 "
              />
              <polygon
                className="svg_14"
                points="28.60000228881836,29.05000150203705 28.60000228881836,38.34999883174896 36.60000228881836,33.650001883506775 "
              />
            </g>
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
